Fix T45909: Garbage output in Viewport with OpenSubdiv device set to GLSL Compute

This isn't a Blender issue and the same bug happens with official OpenSubdiv
examples. For until it's either worked around from OpenSubdiv side or fixed
in the driver we'll force disable GLSL Compute for AMD hardware.